Fixed button and the margin spacing between them

--- a/css/style.css
+++ b/css/style.css
@@ -63,9 +63,7 @@ header {
 }
 
 .searchBar {
-    box-sizing: content-box;
-    padding: 0px;
-    font-size: 3rem;
+    /* font-size: 3rem; Removing this will make sure there is no spacing between buttons*/
     text-align: center;
     display: inline-block;
     position: relative;
@@ -77,19 +75,8 @@ header {
     margin: 0px auto;
 }
 
-.searchBar a {
-    box-sizing: content-box;
-    padding: 0px;
-    font-size: 3rem;
-    text-align: center;
-    display: inline-block;
-    position: relative;
-    height: 5px;
-    float: center;
-    width: 390px;
-    border: 1px solid green;
-    padding: 0px;
-    margin: 0px auto;
+.searchBar input {
+    margin-top: 20px;
 }
 
 #loginBox {
@@ -127,7 +114,7 @@ input {
     transition: 0.25s;
 }
 
-input[type = "text"]:focus, .login input[type = "password"]:focus {
+input[type = "text"]:focus, input[type = "password"]:focus {
     width: 250px;
     background-color: rgb(223, 223, 223);
     border: 2px solid white;
@@ -140,7 +127,7 @@ input:hover {
     color: black;
 }
 
-.login input[type = "button"]:hover {
+input[type = "button"]:hover {
     background-color: rgb(190, 190, 190);
     border: 2px solid white;
     color: black;
@@ -156,7 +143,6 @@ nav {
     border: 1px solid red;
     padding-top: 10px;
     margin: 0px;
-    
     text-align: center;
 }
 
@@ -172,6 +158,7 @@ header a{
     margin: 0px 10px;
     transition: 0.5s;
     cursor: pointer;
+    outline: none;
 }
 
 header a:hover {
